[tool.poetry]
name = "4oirad_scheduler"
version = "0.1.0"
description = ""
authors = ["Chingis <chingiskarbushov@live.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
fake-useragent = "^0.1.11"
flake8 = "^3.9.2"
isort = "^5.9.3"
toml-sort = "^0.19.0"
mypy = "^0.910"
pylint = "^2.9.6"
SQLAlchemy = "1.4.22"
alembic = "^1.6.5"
pydantic = "^1.8.2"
asyncpg = "^0.24.0"
psycopg2-binary = "^2.9.1"
python-dotenv = "^0.19.0"
selenium = "^3.141.0"
fastapi = "^0.85.0"
uvicorn = "^0.18.3"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
